--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyApp for Git!</title>
+    <title>Login Page</title>
   </head>
   <body>
-    <h2>Welcome to the homepage for myApp</h2>
+    <h2>Welcome to the login page</h2>
   </body>
 </html>
