--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h2>Welcome to the homepage for myApp</h2>
+    <h4>This was added in first myApp file</h4>
   </body>
 </html>
