--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h2>Welcome to the homepage for myApp</h2>
     <h4>This was added in first myApp file</h4>
+    <p>Added in the testing branch of myapp</p>
   </body>
 </html>
